Update scene 2 css and add speek on Search word